--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 }
 
 .text-0 {
-  font-size: 5rem;
+  font-size: 4rem;
   line-height: 1;
   margin: 0;
 }
@@ -57,6 +57,11 @@ body {
 }
 
 @media (max-width: 768px) {
+  .text-0 {
+    font-size: 2.5rem;
+    line-height: 1;
+    margin: 0;
+  }
   .text-2 {
     font-size: 1.8rem;
   }
